# litreview-mcp

./: .gitignore  GETTING_STARTED.md  SETUP.md  pyproject.toml
docs/: search-factor-agent-guide.md
skills/litreview-expand/: SKILL.md
skills/litreview-expand/references/: expansion-prompts.md
skills/litreview-export/: SKILL.md
skills/litreview-init/: SKILL.md
skills/litreview-library/: SKILL.md
skills/litreview-relation/: SKILL.md
skills/litreview-search/: SKILL.md
skills/litreview-search/references/: query-mapping.md
src/litreview/: __main__.py  content_factors.py  dedup.py  factors.py  graphs.py  library.py  models.py  relations.py  scoring.py  server.py  sessions.py  utils.py  workspace.py
tests/: conftest.py  test_content_factors.py  test_dedup.py  test_factors.py  test_graphs.py  test_library.py  test_relations.py  test_scoring.py  test_sessions.py  test_utils.py  test_workspace.py
