[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litreview-mcp"
version = "0.1.0"
description = "Literature review MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "tinydb>=4.8",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litreview"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
